@@ -1,3 +1,8 @@
+Thu Dec 17 03:37:43 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* app/crop.c
+	* app/gimpimage.c: warning pogrom
+
 1998-12-16  Jay Cox  <jaycox@earthlink.net>
 
 	* app/xcf.c: fixed bug in the resolution saving code and
